[metadata]
name = dnafrag
author = Chris Probert
author-email = cprobert@stanford.edu
summary = dna fragmentation data storage
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
license = BSD 3-Clause
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Bioinformatics
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    dna fragmentation patterns

[files]
packages = dnafrag
package-data = dnafrag = tests/test_fragbed_*

[entry_points]
console_scripts =
    dnafrag-from-fragbed = dnafrag.cli:main
